Change the csproj file

--- a/The Gamer Text Weather Fighter/The Gamer Text Weather Fighter.csproj
+++ b/The Gamer Text Weather Fighter/The Gamer Text Weather Fighter.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="D:\C#\Program.cs" Link="Program.cs" />
+    <Compile Include="C:\Users\User\source\repos\The-Gamer-Text-Weather-Fighter\The Gamer Text Weather Fighter\Program.cs" Link="Program.cs" />
   </ItemGroup>
 
 </Project>
